// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Parser integration > parses auth-api-key.yaml 1`] = `
{
  "data": {
    "authentication": [
      {
        "envVariable": "APIKEYHEADER",
        "id": "ApiKeyHeader",
        "location": "header",
        "parameterName": "X-API-Key",
        "type": "apiKey",
      },
      {
        "envVariable": "APIKEYQUERY",
        "id": "ApiKeyQuery",
        "location": "query",
        "parameterName": "api_key",
        "type": "apiKey",
      },
    ],
    "endpoints": [
      {
        "authentication": [
          "ApiKeyHeader",
        ],
        "deprecated": false,
        "description": undefined,
        "id": "get_item",
        "method": "get",
        "name": "get_item",
        "parameters": [
          {
            "description": undefined,
            "location": "path",
            "name": "id",
            "required": true,
            "schema": {
              "default": undefined,
              "description": undefined,
              "enum": undefined,
              "examples": undefined,
              "format": undefined,
              "id": "param_id_7",
              "nullable": false,
              "type": "string",
            },
          },
        ],
        "path": "/items/{id}",
        "primaryResponse": {
          "description": "OK",
          "schema": {
            "default": undefined,
            "description": undefined,
            "enum": undefined,
            "examples": undefined,
            "format": undefined,
            "id": "response_200_8",
            "nullable": false,
            "properties": [
              {
                "name": "id",
                "schema": {
                  "default": undefined,
                  "description": undefined,
                  "enum": undefined,
                  "examples": undefined,
                  "format": undefined,
                  "id": "response_200_id_9",
                  "nullable": false,
                  "type": "string",
                },
              },
              {
                "name": "name",
                "schema": {
                  "default": undefined,
                  "description": undefined,
                  "enum": undefined,
                  "examples": undefined,
                  "format": undefined,
                  "id": "response_200_name_10",
                  "nullable": false,
                  "type": "string",
                },
              },
            ],
            "type": "object",
          },
          "statusCode": "200",
        },
        "requestBody": undefined,
        "responses": [
          {
            "description": "OK",
            "schema": {
              "default": undefined,
              "description": undefined,
              "enum": undefined,
              "examples": undefined,
              "format": undefined,
              "id": "response_200_8",
              "nullable": false,
              "properties": [
                {
                  "name": "id",
                  "schema": {
                    "default": undefined,
                    "description": undefined,
                    "enum": undefined,
                    "examples": undefined,
                    "format": undefined,
                    "id": "response_200_id_9",
                    "nullable": false,
                    "type": "string",
                  },
                },
                {
                  "name": "name",
                  "schema": {
                    "default": undefined,
                    "description": undefined,
                    "enum": undefined,
                    "examples": undefined,
                    "format": undefined,
                    "id": "response_200_name_10",
                    "nullable": false,
                    "type": "string",
                  },
                },
              ],
              "type": "object",
            },
            "statusCode": "200",
          },
        ],
        "summary": "Get item by ID",
        "tags": [],
      },
      {
        "authentication": [
          "ApiKeyQuery",
        ],
        "deprecated": false,
        "description": undefined,
        "id": "list_items",
        "method": "get",
        "name": "list_items",
        "parameters": [],
        "path": "/items",
        "primaryResponse": {
          "description": "OK",
          "schema": {
            "default": undefined,
            "description": undefined,
            "enum": undefined,
            "examples": undefined,
            "format": undefined,
            "id": "response_200_5",
            "items": {
              "default": undefined,
              "description": undefined,
              "enum": undefined,
              "examples": undefined,
              "format": undefined,
              "id": "response_200_items_6",
              "nullable": false,
              "type": "string",
            },
            "nullable": false,
            "type": "array",
          },
          "statusCode": "200",
        },
        "requestBody": undefined,
        "responses": [
          {
            "description": "OK",
            "schema": {
              "default": undefined,
              "description": undefined,
              "enum": undefined,
              "examples": undefined,
              "format": undefined,
              "id": "response_200_5",
              "items": {
                "default": undefined,
                "description": undefined,
                "enum": undefined,
                "examples": undefined,
                "format": undefined,
                "id": "response_200_items_6",
                "nullable": false,
                "type": "string",
              },
              "nullable": false,
              "type": "array",
            },
            "statusCode": "200",
          },
        ],
        "summary": "List items",
        "tags": [],
      },
    ],
    "info": {
      "description": undefined,
      "title": "API Key Auth API",
      "version": "1.0.0",
    },
    "schemas": [],
    "server": {
      "baseUrl": "https://api.example.com/v1",
    },
  },
  "warnings": [],
}
`;

exports[`Parser integration > parses auth-bearer.yaml 1`] = `
{
  "data": {
    "authentication": [
      {
        "envVariable": "ACCESS_TOKEN",
        "id": "BearerAuth",
        "location": "header",
        "parameterName": "Authorization",
        "type": "bearer",
      },
    ],
    "endpoints": [
      {
        "authentication": [
          "BearerAuth",
        ],
        "deprecated": false,
        "description": undefined,
        "id": "get_profile",
        "method": "get",
        "name": "get_profile",
        "parameters": [],
        "path": "/profile",
        "primaryResponse": {
          "description": "OK",
          "schema": {
            "default": undefined,
            "description": undefined,
            "enum": undefined,
            "examples": undefined,
            "format": undefined,
            "id": "response_200_1",
            "nullable": false,
            "properties": [
              {
                "name": "email",
                "schema": {
                  "default": undefined,
                  "description": undefined,
                  "enum": undefined,
                  "examples": undefined,
                  "format": undefined,
                  "id": "response_200_email_2",
                  "nullable": false,
                  "type": "string",
                },
              },
              {
                "name": "id",
                "schema": {
                  "default": undefined,
                  "description": undefined,
                  "enum": undefined,
                  "examples": undefined,
                  "format": undefined,
                  "id": "response_200_id_3",
                  "nullable": false,
                  "type": "string",
                },
              },
            ],
            "type": "object",
          },
          "statusCode": "200",
        },
        "requestBody": undefined,
        "responses": [
          {
            "description": "OK",
            "schema": {
              "default": undefined,
              "description": undefined,
              "enum": undefined,
              "examples": undefined,
              "format": undefined,
              "id": "response_200_1",
              "nullable": false,
              "properties": [
                {
                  "name": "email",
                  "schema": {
                    "default": undefined,
                    "description": undefined,
                    "enum": undefined,
                    "examples": undefined,
                    "format": undefined,
                    "id": "response_200_email_2",
                    "nullable": false,
                    "type": "string",
                  },
                },
                {
                  "name": "id",
                  "schema": {
                    "default": undefined,
                    "description": undefined,
                    "enum": undefined,
                    "examples": undefined,
                    "format": undefined,
                    "id": "response_200_id_3",
                    "nullable": false,
                    "type": "string",
                  },
                },
              ],
              "type": "object",
            },
            "statusCode": "200",
          },
        ],
        "summary": "Get user profile",
        "tags": [],
      },
      {
        "authentication": [],
        "deprecated": false,
        "description": undefined,
        "id": "update_settings",
        "method": "put",
        "name": "update_settings",
        "parameters": [],
        "path": "/profile/settings",
        "primaryResponse": {
          "description": "Updated",
          "schema": undefined,
          "statusCode": "200",
        },
        "requestBody": {
          "contentType": "application/json",
          "required": true,
          "schema": {
            "default": undefined,
            "description": undefined,
            "enum": undefined,
            "examples": undefined,
            "format": undefined,
            "id": "body_4",
            "nullable": false,
            "properties": [
              {
                "name": "theme",
                "schema": {
                  "default": undefined,
                  "description": undefined,
                  "enum": [
                    "light",
                    "dark",
                  ],
                  "examples": undefined,
                  "format": undefined,
                  "id": "body_theme_5",
                  "nullable": false,
                  "type": "string",
                },
              },
            ],
            "type": "object",
          },
        },
        "responses": [
          {
            "description": "Updated",
            "schema": undefined,
            "statusCode": "200",
          },
        ],
        "summary": "Update settings",
        "tags": [],
      },
    ],
    "info": {
      "description": undefined,
      "title": "Bearer Auth API",
      "version": "1.0.0",
    },
    "schemas": [],
    "server": {
      "baseUrl": "https://api.example.com/v1",
    },
  },
  "warnings": [],
}
`;

exports[`Parser integration > parses deprecated-endpoint.yaml with P005 1`] = `
{
  "data": {
    "authentication": [],
    "endpoints": [
      {
        "authentication": [],
        "deprecated": true,
        "description": undefined,
        "id": "list_legacy_users",
        "method": "get",
        "name": "list_legacy_users",
        "parameters": [],
        "path": "/legacy/users",
        "primaryResponse": {
          "description": "OK",
          "schema": {
            "default": undefined,
            "description": undefined,
            "enum": undefined,
            "examples": undefined,
            "format": undefined,
            "id": "response_200_1",
            "items": {
              "default": undefined,
              "description": undefined,
              "enum": undefined,
              "examples": undefined,
              "format": undefined,
              "id": "response_200_items_2",
              "nullable": false,
              "properties": [
                {
                  "name": "id",
                  "schema": {
                    "default": undefined,
                    "description": undefined,
                    "enum": undefined,
                    "examples": undefined,
                    "format": undefined,
                    "id": "response_200_items_id_3",
                    "nullable": false,
                    "type": "integer",
                  },
                },
              ],
              "type": "object",
            },
            "nullable": false,
            "type": "array",
          },
          "statusCode": "200",
        },
        "requestBody": undefined,
        "responses": [
          {
            "description": "OK",
            "schema": {
              "default": undefined,
              "description": undefined,
              "enum": undefined,
              "examples": undefined,
              "format": undefined,
              "id": "response_200_1",
              "items": {
                "default": undefined,
                "description": undefined,
                "enum": undefined,
                "examples": undefined,
                "format": undefined,
                "id": "response_200_items_2",
                "nullable": false,
                "properties": [
                  {
                    "name": "id",
                    "schema": {
                      "default": undefined,
                      "description": undefined,
                      "enum": undefined,
                      "examples": undefined,
                      "format": undefined,
                      "id": "response_200_items_id_3",
                      "nullable": false,
                      "type": "integer",
                    },
                  },
                ],
                "type": "object",
              },
              "nullable": false,
              "type": "array",
            },
            "statusCode": "200",
          },
        ],
        "summary": "List legacy users",
        "tags": [],
      },
      {
        "authentication": [],
        "deprecated": false,
        "description": undefined,
        "id": "list_users",
        "method": "get",
        "name": "list_users",
        "parameters": [],
        "path": "/users",
        "primaryResponse": {
          "description": "OK",
          "schema": {
            "default": undefined,
            "description": undefined,
            "enum": undefined,
            "examples": undefined,
            "format": undefined,
            "id": "response_200_4",
            "items": {
              "default": undefined,
              "description": undefined,
              "enum": undefined,
              "examples": undefined,
              "format": undefined,
              "id": "response_200_items_5",
              "nullable": false,
              "properties": [
                {
                  "name": "id",
                  "schema": {
                    "default": undefined,
                    "description": undefined,
                    "enum": undefined,
                    "examples": undefined,
                    "format": undefined,
                    "id": "response_200_items_id_6",
                    "nullable": false,
                    "type": "integer",
                  },
                },
                {
                  "name": "name",
                  "schema": {
                    "default": undefined,
                    "description": undefined,
                    "enum": undefined,
                    "examples": undefined,
                    "format": undefined,
                    "id": "response_200_items_name_7",
                    "nullable": false,
                    "type": "string",
                  },
                },
              ],
              "type": "object",
            },
            "nullable": false,
            "type": "array",
          },
          "statusCode": "200",
        },
        "requestBody": undefined,
        "responses": [
          {
            "description": "OK",
            "schema": {
              "default": undefined,
              "description": undefined,
              "enum": undefined,
              "examples": undefined,
              "format": undefined,
              "id": "response_200_4",
              "items": {
                "default": undefined,
                "description": undefined,
                "enum": undefined,
                "examples": undefined,
                "format": undefined,
                "id": "response_200_items_5",
                "nullable": false,
                "properties": [
                  {
                    "name": "id",
                    "schema": {
                      "default": undefined,
                      "description": undefined,
                      "enum": undefined,
                      "examples": undefined,
                      "format": undefined,
                      "id": "response_200_items_id_6",
                      "nullable": false,
                      "type": "integer",
                    },
                  },
                  {
                    "name": "name",
                    "schema": {
                      "default": undefined,
                      "description": undefined,
                      "enum": undefined,
                      "examples": undefined,
                      "format": undefined,
                      "id": "response_200_items_name_7",
                      "nullable": false,
                      "type": "string",
                    },
                  },
                ],
                "type": "object",
              },
              "nullable": false,
              "type": "array",
            },
            "statusCode": "200",
          },
        ],
        "summary": "List users",
        "tags": [],
      },
    ],
    "info": {
      "description": undefined,
      "title": "Deprecated API",
      "version": "1.0.0",
    },
    "schemas": [],
    "server": {
      "baseUrl": "https://api.example.com/v1",
    },
  },
  "warnings": [
    {
      "code": "P005",
      "location": "/legacy/users.get",
      "message": "Deprecated endpoint",
    },
  ],
}
`;

exports[`Parser integration > parses no-servers.yaml with P004 1`] = `
{
  "data": {
    "authentication": [],
    "endpoints": [
      {
        "authentication": [],
        "deprecated": false,
        "description": undefined,
        "id": "health_check",
        "method": "get",
        "name": "health_check",
        "parameters": [],
        "path": "/health",
        "primaryResponse": {
          "description": "OK",
          "schema": {
            "default": undefined,
            "description": undefined,
            "enum": undefined,
            "examples": undefined,
            "format": undefined,
            "id": "response_200_1",
            "nullable": false,
            "properties": [
              {
                "name": "status",
                "schema": {
                  "default": undefined,
                  "description": undefined,
                  "enum": [
                    "ok",
                  ],
                  "examples": undefined,
                  "format": undefined,
                  "id": "response_200_status_2",
                  "nullable": false,
                  "type": "string",
                },
              },
            ],
            "type": "object",
          },
          "statusCode": "200",
        },
        "requestBody": undefined,
        "responses": [
          {
            "description": "OK",
            "schema": {
              "default": undefined,
              "description": undefined,
              "enum": undefined,
              "examples": undefined,
              "format": undefined,
              "id": "response_200_1",
              "nullable": false,
              "properties": [
                {
                  "name": "status",
                  "schema": {
                    "default": undefined,
                    "description": undefined,
                    "enum": [
                      "ok",
                    ],
                    "examples": undefined,
                    "format": undefined,
                    "id": "response_200_status_2",
                    "nullable": false,
                    "type": "string",
                  },
                },
              ],
              "type": "object",
            },
            "statusCode": "200",
          },
        ],
        "summary": "Health check",
        "tags": [],
      },
    ],
    "info": {
      "description": undefined,
      "title": "No Servers API",
      "version": "1.0.0",
    },
    "schemas": [],
    "server": {
      "baseUrl": "",
    },
  },
  "warnings": [
    {
      "code": "P004",
      "location": undefined,
      "message": "No servers defined; BASE_URL required at runtime",
    },
  ],
}
`;

exports[`Parser integration > parses petstore.yaml 1`] = `
{
  "data": {
    "authentication": [],
    "endpoints": [
      {
        "authentication": [],
        "deprecated": false,
        "description": undefined,
        "id": "add_pet",
        "method": "post",
        "name": "add_pet",
        "parameters": [],
        "path": "/pet",
        "primaryResponse": {
          "description": "Successful operation",
          "schema": {
            "default": undefined,
            "description": undefined,
            "enum": undefined,
            "examples": undefined,
            "format": undefined,
            "id": "response_200_5",
            "nullable": false,
            "properties": [
              {
                "name": "id",
                "schema": {
                  "default": undefined,
                  "description": undefined,
                  "enum": undefined,
                  "examples": undefined,
                  "format": "int64",
                  "id": "response_200_id_6",
                  "nullable": true,
                  "type": "integer",
                },
              },
              {
                "name": "name",
                "schema": {
                  "default": undefined,
                  "description": undefined,
                  "enum": undefined,
                  "examples": [
                    "doggie",
                  ],
                  "format": undefined,
                  "id": "response_200_name_7",
                  "nullable": false,
                  "type": "string",
                },
              },
              {
                "name": "status",
                "schema": {
                  "default": "available",
                  "description": undefined,
                  "enum": [
                    "available",
                    "pending",
                    "sold",
                  ],
                  "examples": undefined,
                  "format": undefined,
                  "id": "response_200_status_8",
                  "nullable": false,
                  "type": "string",
                },
              },
            ],
            "required": [
              "name",
            ],
            "type": "object",
          },
          "statusCode": "200",
        },
        "requestBody": {
          "contentType": "application/json",
          "required": true,
          "schema": {
            "default": undefined,
            "description": undefined,
            "enum": undefined,
            "examples": undefined,
            "format": undefined,
            "id": "body_1",
            "nullable": false,
            "properties": [
              {
                "name": "id",
                "schema": {
                  "default": undefined,
                  "description": undefined,
                  "enum": undefined,
                  "examples": undefined,
                  "format": "int64",
                  "id": "body_id_2",
                  "nullable": true,
                  "type": "integer",
                },
              },
              {
                "name": "name",
                "schema": {
                  "default": undefined,
                  "description": undefined,
                  "enum": undefined,
                  "examples": [
                    "doggie",
                  ],
                  "format": undefined,
                  "id": "body_name_3",
                  "nullable": false,
                  "type": "string",
                },
              },
              {
                "name": "status",
                "schema": {
                  "default": "available",
                  "description": undefined,
                  "enum": [
                    "available",
                    "pending",
                    "sold",
                  ],
                  "examples": undefined,
                  "format": undefined,
                  "id": "body_status_4",
                  "nullable": false,
                  "type": "string",
                },
              },
            ],
            "required": [
              "name",
            ],
            "type": "object",
          },
        },
        "responses": [
          {
            "description": "Successful operation",
            "schema": {
              "default": undefined,
              "description": undefined,
              "enum": undefined,
              "examples": undefined,
              "format": undefined,
              "id": "response_200_5",
              "nullable": false,
              "properties": [
                {
                  "name": "id",
                  "schema": {
                    "default": undefined,
                    "description": undefined,
                    "enum": undefined,
                    "examples": undefined,
                    "format": "int64",
                    "id": "response_200_id_6",
                    "nullable": true,
                    "type": "integer",
                  },
                },
                {
                  "name": "name",
                  "schema": {
                    "default": undefined,
                    "description": undefined,
                    "enum": undefined,
                    "examples": [
                      "doggie",
                    ],
                    "format": undefined,
                    "id": "response_200_name_7",
                    "nullable": false,
                    "type": "string",
                  },
                },
                {
                  "name": "status",
                  "schema": {
                    "default": "available",
                    "description": undefined,
                    "enum": [
                      "available",
                      "pending",
                      "sold",
                    ],
                    "examples": undefined,
                    "format": undefined,
                    "id": "response_200_status_8",
                    "nullable": false,
                    "type": "string",
                  },
                },
              ],
              "required": [
                "name",
              ],
              "type": "object",
            },
            "statusCode": "200",
          },
        ],
        "summary": "Add a new pet to the store",
        "tags": [
          "pet",
        ],
      },
      {
        "authentication": [],
        "deprecated": false,
        "description": undefined,
        "id": "delete_pet",
        "method": "delete",
        "name": "delete_pet",
        "parameters": [
          {
            "description": undefined,
            "location": "path",
            "name": "petId",
            "required": true,
            "schema": {
              "default": undefined,
              "description": undefined,
              "enum": undefined,
              "examples": undefined,
              "format": "int64",
              "id": "param_petId_22",
              "nullable": false,
              "type": "integer",
            },
          },
        ],
        "path": "/pet/{petId}",
        "primaryResponse": {
          "description": "Pet deleted",
          "schema": undefined,
          "statusCode": "200",
        },
        "requestBody": undefined,
        "responses": [
          {
            "description": "Pet deleted",
            "schema": undefined,
            "statusCode": "200",
          },
        ],
        "summary": "Deletes a pet",
        "tags": [
          "pet",
        ],
      },
      {
        "authentication": [],
        "deprecated": false,
        "description": undefined,
        "id": "find_pets_by_status",
        "method": "get",
        "name": "find_pets_by_status",
        "parameters": [
          {
            "description": "Status values that need to be considered for filter",
            "location": "query",
            "name": "status",
            "required": true,
            "schema": {
              "default": undefined,
              "description": undefined,
              "enum": undefined,
              "examples": undefined,
              "format": undefined,
              "id": "param_status_23",
              "items": {
                "default": undefined,
                "description": undefined,
                "enum": [
                  "available",
                  "pending",
                  "sold",
                ],
                "examples": undefined,
                "format": undefined,
                "id": "param_status_items_24",
                "nullable": false,
                "type": "string",
              },
              "nullable": false,
              "type": "array",
            },
          },
        ],
        "path": "/pet/findByStatus",
        "primaryResponse": {
          "description": "successful operation",
          "schema": {
            "default": undefined,
            "description": undefined,
            "enum": undefined,
            "examples": undefined,
            "format": undefined,
            "id": "response_200_25",
            "items": {
              "default": undefined,
              "description": undefined,
              "enum": undefined,
              "examples": undefined,
              "format": undefined,
              "id": "response_200_items_26",
              "nullable": false,
              "properties": [
                {
                  "name": "id",
                  "schema": {
                    "default": undefined,
                    "description": undefined,
                    "enum": undefined,
                    "examples": undefined,
                    "format": "int64",
                    "id": "response_200_items_id_27",
                    "nullable": true,
                    "type": "integer",
                  },
                },
                {
                  "name": "name",
                  "schema": {
                    "default": undefined,
                    "description": undefined,
                    "enum": undefined,
                    "examples": [
                      "doggie",
                    ],
                    "format": undefined,
                    "id": "response_200_items_name_28",
                    "nullable": false,
                    "type": "string",
                  },
                },
                {
                  "name": "status",
                  "schema": {
                    "default": "available",
                    "description": undefined,
                    "enum": [
                      "available",
                      "pending",
                      "sold",
                    ],
                    "examples": undefined,
                    "format": undefined,
                    "id": "response_200_items_status_29",
                    "nullable": false,
                    "type": "string",
                  },
                },
              ],
              "required": [
                "name",
              ],
              "type": "object",
            },
            "nullable": false,
            "type": "array",
          },
          "statusCode": "200",
        },
        "requestBody": undefined,
        "responses": [
          {
            "description": "successful operation",
            "schema": {
              "default": undefined,
              "description": undefined,
              "enum": undefined,
              "examples": undefined,
              "format": undefined,
              "id": "response_200_25",
              "items": {
                "default": undefined,
                "description": undefined,
                "enum": undefined,
                "examples": undefined,
                "format": undefined,
                "id": "response_200_items_26",
                "nullable": false,
                "properties": [
                  {
                    "name": "id",
                    "schema": {
                      "default": undefined,
                      "description": undefined,
                      "enum": undefined,
                      "examples": undefined,
                      "format": "int64",
                      "id": "response_200_items_id_27",
                      "nullable": true,
                      "type": "integer",
                    },
                  },
                  {
                    "name": "name",
                    "schema": {
                      "default": undefined,
                      "description": undefined,
                      "enum": undefined,
                      "examples": [
                        "doggie",
                      ],
                      "format": undefined,
                      "id": "response_200_items_name_28",
                      "nullable": false,
                      "type": "string",
                    },
                  },
                  {
                    "name": "status",
                    "schema": {
                      "default": "available",
                      "description": undefined,
                      "enum": [
                        "available",
                        "pending",
                        "sold",
                      ],
                      "examples": undefined,
                      "format": undefined,
                      "id": "response_200_items_status_29",
                      "nullable": false,
                      "type": "string",
                    },
                  },
                ],
                "required": [
                  "name",
                ],
                "type": "object",
              },
              "nullable": false,
              "type": "array",
            },
            "statusCode": "200",
          },
        ],
        "summary": "Finds Pets by status",
        "tags": [
          "pet",
        ],
      },
      {
        "authentication": [],
        "deprecated": false,
        "description": undefined,
        "id": "get_pet_by_id",
        "method": "get",
        "name": "get_pet_by_id",
        "parameters": [
          {
            "description": undefined,
            "location": "path",
            "name": "petId",
            "required": true,
            "schema": {
              "default": undefined,
              "description": undefined,
              "enum": undefined,
              "examples": undefined,
              "format": "int64",
              "id": "param_petId_17",
              "nullable": false,
              "type": "integer",
            },
          },
        ],
        "path": "/pet/{petId}",
        "primaryResponse": {
          "description": "successful operation",
          "schema": {
            "default": undefined,
            "description": undefined,
            "enum": undefined,
            "examples": undefined,
            "format": undefined,
            "id": "response_200_18",
            "nullable": false,
            "properties": [
              {
                "name": "id",
                "schema": {
                  "default": undefined,
                  "description": undefined,
                  "enum": undefined,
                  "examples": undefined,
                  "format": "int64",
                  "id": "response_200_id_19",
                  "nullable": true,
                  "type": "integer",
                },
              },
              {
                "name": "name",
                "schema": {
                  "default": undefined,
                  "description": undefined,
                  "enum": undefined,
                  "examples": [
                    "doggie",
                  ],
                  "format": undefined,
                  "id": "response_200_name_20",
                  "nullable": false,
                  "type": "string",
                },
              },
              {
                "name": "status",
                "schema": {
                  "default": "available",
                  "description": undefined,
                  "enum": [
                    "available",
                    "pending",
                    "sold",
                  ],
                  "examples": undefined,
                  "format": undefined,
                  "id": "response_200_status_21",
                  "nullable": false,
                  "type": "string",
                },
              },
            ],
            "required": [
              "name",
            ],
            "type": "object",
          },
          "statusCode": "200",
        },
        "requestBody": undefined,
        "responses": [
          {
            "description": "successful operation",
            "schema": {
              "default": undefined,
              "description": undefined,
              "enum": undefined,
              "examples": undefined,
              "format": undefined,
              "id": "response_200_18",
              "nullable": false,
              "properties": [
                {
                  "name": "id",
                  "schema": {
                    "default": undefined,
                    "description": undefined,
                    "enum": undefined,
                    "examples": undefined,
                    "format": "int64",
                    "id": "response_200_id_19",
                    "nullable": true,
                    "type": "integer",
                  },
                },
                {
                  "name": "name",
                  "schema": {
                    "default": undefined,
                    "description": undefined,
                    "enum": undefined,
                    "examples": [
                      "doggie",
                    ],
                    "format": undefined,
                    "id": "response_200_name_20",
                    "nullable": false,
                    "type": "string",
                  },
                },
                {
                  "name": "status",
                  "schema": {
                    "default": "available",
                    "description": undefined,
                    "enum": [
                      "available",
                      "pending",
                      "sold",
                    ],
                    "examples": undefined,
                    "format": undefined,
                    "id": "response_200_status_21",
                    "nullable": false,
                    "type": "string",
                  },
                },
              ],
              "required": [
                "name",
              ],
              "type": "object",
            },
            "statusCode": "200",
          },
        ],
        "summary": "Find pet by ID",
        "tags": [
          "pet",
        ],
      },
      {
        "authentication": [],
        "deprecated": false,
        "description": undefined,
        "id": "update_pet",
        "method": "put",
        "name": "update_pet",
        "parameters": [],
        "path": "/pet",
        "primaryResponse": {
          "description": "Successful operation",
          "schema": {
            "default": undefined,
            "description": undefined,
            "enum": undefined,
            "examples": undefined,
            "format": undefined,
            "id": "response_200_13",
            "nullable": false,
            "properties": [
              {
                "name": "id",
                "schema": {
                  "default": undefined,
                  "description": undefined,
                  "enum": undefined,
                  "examples": undefined,
                  "format": "int64",
                  "id": "response_200_id_14",
                  "nullable": true,
                  "type": "integer",
                },
              },
              {
                "name": "name",
                "schema": {
                  "default": undefined,
                  "description": undefined,
                  "enum": undefined,
                  "examples": [
                    "doggie",
                  ],
                  "format": undefined,
                  "id": "response_200_name_15",
                  "nullable": false,
                  "type": "string",
                },
              },
              {
                "name": "status",
                "schema": {
                  "default": "available",
                  "description": undefined,
                  "enum": [
                    "available",
                    "pending",
                    "sold",
                  ],
                  "examples": undefined,
                  "format": undefined,
                  "id": "response_200_status_16",
                  "nullable": false,
                  "type": "string",
                },
              },
            ],
            "required": [
              "name",
            ],
            "type": "object",
          },
          "statusCode": "200",
        },
        "requestBody": {
          "contentType": "application/json",
          "required": true,
          "schema": {
            "default": undefined,
            "description": undefined,
            "enum": undefined,
            "examples": undefined,
            "format": undefined,
            "id": "body_9",
            "nullable": false,
            "properties": [
              {
                "name": "id",
                "schema": {
                  "default": undefined,
                  "description": undefined,
                  "enum": undefined,
                  "examples": undefined,
                  "format": "int64",
                  "id": "body_id_10",
                  "nullable": true,
                  "type": "integer",
                },
              },
              {
                "name": "name",
                "schema": {
                  "default": undefined,
                  "description": undefined,
                  "enum": undefined,
                  "examples": [
                    "doggie",
                  ],
                  "format": undefined,
                  "id": "body_name_11",
                  "nullable": false,
                  "type": "string",
                },
              },
              {
                "name": "status",
                "schema": {
                  "default": "available",
                  "description": undefined,
                  "enum": [
                    "available",
                    "pending",
                    "sold",
                  ],
                  "examples": undefined,
                  "format": undefined,
                  "id": "body_status_12",
                  "nullable": false,
                  "type": "string",
                },
              },
            ],
            "required": [
              "name",
            ],
            "type": "object",
          },
        },
        "responses": [
          {
            "description": "Successful operation",
            "schema": {
              "default": undefined,
              "description": undefined,
              "enum": undefined,
              "examples": undefined,
              "format": undefined,
              "id": "response_200_13",
              "nullable": false,
              "properties": [
                {
                  "name": "id",
                  "schema": {
                    "default": undefined,
                    "description": undefined,
                    "enum": undefined,
                    "examples": undefined,
                    "format": "int64",
                    "id": "response_200_id_14",
                    "nullable": true,
                    "type": "integer",
                  },
                },
                {
                  "name": "name",
                  "schema": {
                    "default": undefined,
                    "description": undefined,
                    "enum": undefined,
                    "examples": [
                      "doggie",
                    ],
                    "format": undefined,
                    "id": "response_200_name_15",
                    "nullable": false,
                    "type": "string",
                  },
                },
                {
                  "name": "status",
                  "schema": {
                    "default": "available",
                    "description": undefined,
                    "enum": [
                      "available",
                      "pending",
                      "sold",
                    ],
                    "examples": undefined,
                    "format": undefined,
                    "id": "response_200_status_16",
                    "nullable": false,
                    "type": "string",
                  },
                },
              ],
              "required": [
                "name",
              ],
              "type": "object",
            },
            "statusCode": "200",
          },
        ],
        "summary": "Update an existing pet",
        "tags": [
          "pet",
        ],
      },
    ],
    "info": {
      "description": "A sample API that uses a petstore as an example",
      "title": "Swagger Petstore",
      "version": "1.0.0",
    },
    "schemas": [
      {
        "default": undefined,
        "description": undefined,
        "enum": undefined,
        "examples": undefined,
        "format": undefined,
        "id": "Pet",
        "nullable": false,
        "properties": [
          {
            "name": "id",
            "schema": {
              "default": undefined,
              "description": undefined,
              "enum": undefined,
              "examples": undefined,
              "format": "int64",
              "id": "Pet_id_2",
              "nullable": true,
              "type": "integer",
            },
          },
          {
            "name": "name",
            "schema": {
              "default": undefined,
              "description": undefined,
              "enum": undefined,
              "examples": [
                "doggie",
              ],
              "format": undefined,
              "id": "Pet_name_3",
              "nullable": false,
              "type": "string",
            },
          },
          {
            "name": "status",
            "schema": {
              "default": "available",
              "description": undefined,
              "enum": [
                "available",
                "pending",
                "sold",
              ],
              "examples": undefined,
              "format": undefined,
              "id": "Pet_status_4",
              "nullable": false,
              "type": "string",
            },
          },
        ],
        "required": [
          "name",
        ],
        "type": "object",
      },
    ],
    "server": {
      "baseUrl": "https://petstore3.swagger.io/api/v3",
    },
  },
  "warnings": [],
}
`;
